Добавлен шрифт, вендорные префиксы и форма обратной связи

--- a/index.html
+++ b/index.html
@@ -213,6 +213,23 @@
         </div>
       </section>
 
+      <section class="form">
+        <h2 class="section-title">Давайте учиться вместе</h2>
+        <p class="section-subtitle">Поделитесь, какие эффективные техники используете вы в своем обучении? <br>И благодаря вам мы улучшим наш ресурс, дополнив его новой информацией!</p>
+        <form class="form__box">
+          <fieldset class="form__contact-info">
+            <input class="form__item form__item_el_contact" type="text" name="name" placeholder="Имя Фамилия" required>
+            <input class="form__item form__item_el_contact" type="email" name="email" placeholder="hello@example.com" required>
+          </fieldset>
+          <fieldset class="form__message-info">
+            <textarea class="form__item form__item_el_message" name="text" placeholder="Опишите ваш лучший прием в обучении" required></textarea>
+          </fieldset>
+          <fieldset class="form__dispatch">
+            <input type="submit" class="form__button links-style" value="Отправить">
+          </fieldset>
+        </form>
+      </section>
+
     </main>
 
     <footer class="footer">
