Добавлен формат woff2, отформатирован блок form

--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
             <input class="form__item form__item_el_contact" type="text" name="name" placeholder="Имя Фамилия" required>
             <input class="form__item form__item_el_contact" type="email" name="email" placeholder="hello@example.com" required>
           </fieldset>
-          <fieldset class="form__message-info">
+          <div class="form__message-info">
             <textarea class="form__item form__item_el_message" name="text" placeholder="Опишите ваш лучший прием в обучении" required></textarea>
-          </fieldset>
-          <fieldset class="form__dispatch">
+          </div>
+          <div class="form__dispatch">
             <input type="submit" class="form__button links-style" value="Отправить">
-          </fieldset>
+          </div>
         </form>
       </section>
 
